Fix conf4j-extras module - moved java/test dirs to src
As a result sources nor test were not visible to the project.